--- a/mnist1.ipynb
+++ b/mnist1.ipynb
@@ -19,11 +19,11 @@
     "\n",
     "import wandb\n",
     "\n",
-    "wandb.init(project=\"mnist\", entity=\"jaspertan\")\n",
+    "wandb.init(project=\"mnist\", entity=\"\")\n",
     "\n",
     "import torch\n",
     "import os\n",
-    "os.environ[\"WANDB_API_KEY\"] = \"9b51c1a70a432bca6e85f45f9d7936ed1ae780ff\"\n",
+    "os.environ[\"WANDB_API_KEY\"] = \"\"\n",
     "\n",
     "# 如果能用GPU则选用GPU\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
